--- a/Moyo/Venetian.html
+++ b/Moyo/Venetian.html
@@ -2332,10 +2332,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i30"></div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
-    <!--#i2.i105.slice-image.html:slice-image/html.1-->
-<dataimg id="i105" src="https://i.imgur.com/7BzilNr.jpg"></dataimg>
-<!--#/#--><!--#i2.i108.slice-image.html:slice-image/html.1-->
+    <!--#i2.i108.slice-image.html:slice-image/html.1-->
 <dataimg id="i108" src="https://i.imgur.com/TKiK6Yr.jpg"></dataimg>
+<!--#/#--><!--#i2.i105.slice-image.html:slice-image/html.1-->
+<dataimg id="i105" src="https://i.imgur.com/7BzilNr.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/eKpci6p.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2353,7 +2353,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/I35a18f.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Disfruta de nuestro delicioso 2x1 todos los jueves y más promoción muy especiales.</div>
+<div id="i68">Disfruta de nuestro delicioso 2x1 todos los jueves y más promociones especiales.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡GANA CON #MOYO!</div>
 <!--#/#--><!--#i109.image.html:image/html-->
@@ -2414,9 +2414,9 @@ document.addEventListener('DOMContentLoaded', function() {
         setInterval(next, 5000);
 /*End Automatic Function*/
 });
-/*#/#*//*#i2.i105.slice-image.js:slice-image/base/js.1*/
-
 /*#/#*//*#i2.i108.slice-image.js:slice-image/base/js.1*/
+
+/*#/#*//*#i2.i105.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
@@ -2564,11 +2564,11 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
-/*#/#*//*#i2.i105.slice-image.meta:slice-image/meta.1*/
-name: 7BzilNr.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
 /*#/#*//*#i2.i108.slice-image.meta:slice-image/meta.1*/
 name: TKiK6Yr.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i105.slice-image.meta:slice-image/meta.1*/
+name: 7BzilNr.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: eKpci6p.jpg; fileId: ; sourceTypeId: externalUrl;
@@ -2599,7 +2599,7 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Disfruta de nuestro delicioso 2x1 todos los jueves y más promoción muy especiales.; customName: false;
+name: Disfruta de nuestro delicioso 2x1 todos los jueves y más promociones especiales.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
