--- a/Midas form/formulario-def.html
+++ b/Midas form/formulario-def.html
@@ -747,7 +747,7 @@
                     bv1: btoa(responseData.name.norm_to_ascii().crypt_sym()),
                 //    bv2: btoa(responseData.lastName.norm_to_ascii().crypt_sym()),
                     bv3: btoa(responseData.email.norm_to_ascii().crypt_sym()),
-                //    bv4: btoa(responseData.phone.norm_to_ascii().crypt_sym()),
+                    bv4: btoa(responseData.phone.norm_to_ascii().crypt_sym()),
                 //    bv5: btoa(responseData.company.norm_to_ascii().crypt_sym()),
                    
                 };
